--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -421,3 +421,17 @@ Small Device Styles
   }
 
 }
+
+
+
+/*******************************************************************************
+***************** CUSTOM *****************
+*******************************************************************************/
+
+.ta_c {
+  text-align: center;
+}
+
+h3 {
+  margin-top: 20px;
+}
